--- a/test-suites/metaclear-network-bandwidth.yaml
+++ b/test-suites/metaclear-network-bandwidth.yaml
@@ -1,7 +1,7 @@
 attacknetConfig:
   grafanaPodName: grafana
   grafanaPodPort: 3000
-  waitBeforeInjectionSeconds: 240
+  waitBeforeInjectionSeconds: 100
   reuseDevnetBetweenRuns: true
   allowPostFaultInspection: true
   existingDevnetNamespace: kt-relaytestnet
@@ -24,16 +24,16 @@ testConfig:
         kind: NetworkChaos
         apiVersion: chaos-mesh.org/v1alpha1
         spec:
-          selector:
-            labelSelectors:
-              kurtosistech.com.custom/ethereum-package.client-type: beacon
+          # selector:
+          #   labelSelectors:
+          #     kurtosistech.com.custom/ethereum-package.client-type: beacon
           target:
             mode: all
             labelSelectors:
-              kurtosistech.com/id: cl-1-lighthouse-geth
+              kurtosistech.com/id: cl-2-lighthouse-geth
           mode: all
           action: bandwidth
-          duration: 1m
+          duration: 5m
           direction: from
           bandwidth:
             rate: '10kbps'
