--- a/test-suites/metaclear-clock-skew.yaml
+++ b/test-suites/metaclear-clock-skew.yaml
@@ -4,10 +4,10 @@ attacknetConfig:
   waitBeforeInjectionSeconds: 150
   reuseDevnetBetweenRuns: true
   allowPostFaultInspection: true
-  existingDevnetNamespace: kt-relaytestnet
+  existingDevnetNamespace: kt-attacknetforrelay
 
 harnessConfig:
-  networkPackage: github.com/ethpandaops/ethereum-package
+  networkPackage: github.com/crytic/ethereum-package@0ed559c2661989b44cd2a44eca013acd64786f7f
   networkConfig: metaclear-relayer-devnet.yaml
   networkType: ethereum
 
